--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <p>Что-то там про город</p>
                 <p>Что-то там про Мэри</p>
                 <p>Что-то там про туман</p>
+                <p>Что-то там про письмо</p>
             </div>
 
             <button class="mystery-button" onclick="revealSecret()">SHOW SECRET</button>
